--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>JARVIS Dashboard</title>
   <link rel="stylesheet" href="style.css" />
-  <link href src="loader.html" />
+  <link rel="stylesheet" href="loader.css" />
 </head>
 <body aria-label="JARVIS Dashboard" tabindex="0">
 
@@ -64,13 +64,18 @@
           <div class="feature-card"><h4>🧠 Smart Memory</h4><p>JSON-based recall system for context retention</p></div>
           <div class="feature-card"><h4>🧰 Arduino Integration</h4><p>Smart home automation capabilities</p></div>
           <div class="feature-card"><h4>🎨 Games</h4><p>Jarvis has it's in-built games</p></div>
-          <div class="feature-card"><h4>🎨 Multi-Platform</h4><p>Website and App support</p></div>
+          <div class="feature-card"><h4>🎨 Platforms</h4><p>Website and App support</p></div>
           <div class="feature-card"><h4>🎨 Multi-Functional</h4><p>GUI, CLI, and agent support</p></div>
-        </div>
+          <div class="feature-card"><h4>🎨 Mobile app support</h4><p>This feature will coming soon</p></div>
+          <div class="feature-card"><h4>🎨 Ai Agent</h4><p>Some new function will coming soon</p></div>
+          <div class="feature-card"><h4>🎨 Multi-Platform</h4><p>Website supported via MacOS,Android,iOS,Windows 10/11 and Linux distros</p></div>
+          <div class="feature-card"><h4>🎨 JarSetting</h4><p>JarSetting is the setting tool for Jarvis for Windows 11</p></div>
+      </div>   
+
         <button class="accordion" onclick="toggleAccordion(this)" aria-expanded="false">What is JARVIS?</button>
         <div class="panel"><p>JARVIS is a modular, open-source assistant designed to run offline with advanced voice recognition and smart home integration capabilities.</p></div>
         <button class="accordion" onclick="toggleAccordion(this)" aria-expanded="false">How to Start?</button>
-        <div class="panel"><ol><li>Install Python 3.10+</li><li>Clone repo from GitHub</li><li>Install dependencies with <code>pip install -r requirements.txt</code></li><li>Run <code>python main.py</code></li></ol></div>
+        <div class="panel"><ol><li>Install Python 3.10+</li><li>Clone repo from GitHub</li><li>Install dependencies with <code>pip install -r requirements.txt</code></li><li>Run <code>python main.py </code>in the VS code or Windows powershell</li></ol></div>
         <button class="accordion" onclick="toggleAccordion(this)" aria-expanded="false">Join Development</button>
         <div class="panel"><p>Contribute on GitHub: <a href="https://github.com/raj0793/jarvis.ai.in" target="_blank" rel="noopener">🔗 Repository</a></p></div>
         <button class="accordion" onclick="toggleAccordion(this)" aria-expanded="false">JARVIS Preview</button>
@@ -195,12 +200,11 @@
     <h1>Download and Install JARVIS</h1>
     <div class="download-section">
       <h2>Get the Latest Release</h2>
-      <p>Download the latest version of Python of  official website.</p>
-      <a href="https://www.python.org" target="_blank" rel="noopener">🔗 Download Here</a>
+      <p>Download the latest version of Python from official website.</p>
+      <a href="https://www.python.org" target="_blank" rel="noopener">🔗 PYTHON</a>
       <h2>Installation Instructions</h2>
-      <ol>
-        <li>Extract the downloaded ZIP file to your preferred location.</li>
-        <li>Ensure Python 3.10.0 is installed on your system(check aad to path during installation).</li>
+      <ol>        
+        <li>Ensure Python 3.10.0 is installed on your system(check add to path during installation).</li>
         <li>Open terminal or command prompt in the extracted folder.</li>
         <li>Run <code>pip install -r requirements.txt</code> to install dependencies.</li>
         <li>Launch JARVIS using <code>python main.py</code>.</li>
