--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     function launchSite() {
       document.getElementById("pageLoader").classList.add("hidden");
       setTimeout(() => {
-        window.location.href = "index.html";
+        window.location.href = "main.html"; // Change to your desired page
       }, 2000); // matches transition duration
     }
   </script>
