--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@
     }
     .title.show {animation:fadeInUp 1s ease-out forwards;}
 
+    #extra {
+      display:inline-block;
+      background: #ff004c;
+      color: white;
+      font-size: 0.8rem;
+      padding: 5px 5px;
+      border-radius: 9px;
+      margin-left: 8px;
+      vertical-align: super;
+    }
+
     .subtitle {
       color:rgb(249, 229, 4);font-size:1.2rem;margin-bottom:2rem;
       opacity:0;
@@ -128,7 +139,9 @@
     <div class="particles" id="particles"></div>
     <div class="container">
       <h1 class="title" id="welcomeText">Welcome to</h1>
-      <p class="subtitle" id="subText">Your Ai assistant</p>
+      <p class="subtitle" id="subText">Your all in one smart Ai agent or assistant 
+        <p id="extra">Beta</p>
+      </p>
       <div class="logo-container" id="logoContainer">
         <svg class="jarvis-logo" viewbox="0 0 600 150" xmlns="http://www.w3.org/2000/svg">
           <text x="100" y="100">JARVIS</text>
