--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Jarvis: Welcome</title>
   <style>
     *{margin:0;padding:0;box-sizing:border-box;}
-    body,html{background:#0d1117;height:100%;font-family:'Arial',sans-serif;overflow:hidden;}
+    body,html{background:#00c3ff;height:100%;font-family:'Arial',sans-serif;overflow:hidden;}
 
     /* === WELCOME SCREEN === */
     #welcomeScreen {
@@ -19,7 +19,7 @@
 
     .container {
       text-align:center;
-      padding:2rem;
+      padding: 2.8em;
       background:rgba(255,255,255,0.1);
       -webkit-backdrop-filter:blur(10px);
       backdrop-filter:blur(10px);
